<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">warhammerToolsForAndroid</string>
    <string name="characterName">Nom : </string>
    <string name="race">Race : </string>
    <string name="career">Carrière : </string>
    <string name="buttonCreate">Générer le personnage</string>
    <string name="age">Age : </string>
    <string name="gender">Sexe : </string>
    <string name="height">Taille :</string>
    <string name="eyeColour">Couleur des yeux :</string>
    <string name="hairColour">Couleur des cheveux :</string>
    <string name="weight">Poids :</string>
    <string name="astralSign">Signe astral :</string>
    <string name="mainHand">Main directrice :</string>
    <string name="birthPlace">Lieu de naissance :</string>
    <string name="favoriteGod">Dieu favori : </string>
    <string name="distinguishingSigns">Signes distinctifs :</string>
    <string name="WS">CC</string>
    <string name="BS">CT</string>
    <string name="S">F</string>
    <string name="T">E</string>
    <string name="Ag">Ag</string>
    <string name="Int">Int</string>
    <string name="WP">FM</string>
    <string name="Fel">Soc</string>
    <string name="A">A</string>
    <string name="W">B</string>
    <string name="SB">BF</string>
    <string name="TB">BE</string>
    <string name="M">M</string>
    <string name="Mag">Mag</string>
    <string name="IP">PF</string>
    <string name="FP">PD</string>

</resources>
