<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/tableLayoutStyle">
    <TableRow style="@style/tableRowStyle">
        <TextView style="@style/tableCellStyle"
                  android:text="@string/WS"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/BS"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/S"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/T"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/Ag"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/Int"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/WP"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/Fel"/>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/WSText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/BSText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/SText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/TText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/AgText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/IntText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/WPText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/FelText"/>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <TextView style="@style/tableCellStyle"
                  android:text="@string/A"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/W"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/SB"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/TB"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/M"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/Mag"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/IP"/>
        <TextView style="@style/tableCellStyle"
                  android:text="@string/FP"/>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/AText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/WText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/SBText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/TBText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/MText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/MagText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/IPText"/>
        <EditText style="@style/tableCellStyle"
                  android:id="@+id/FPText"/>
    </TableRow>
</TableLayout>