<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/tableLayoutStyle">
    <TableRow style="@style/tableRowStyle">
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/age"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textAge"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/gender"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/spinnerGender"/>
        </LinearLayout>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/eyeColour"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textEyeColour"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/height"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textHeight"/>
        </LinearLayout>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/hairColour"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textHairColour"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/weight"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textWeight"/>
        </LinearLayout>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/astralSign"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textAstralSign"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/mainHand"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/spinnerMainHand"/>
        </LinearLayout>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/birthPlace"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textBirthPlace"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/favoriteGod"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/favoriteGod"/>
        </LinearLayout>
    </TableRow>
    <TableRow style="@style/tableRowStyle">
        <LinearLayout android:orientation="vertical"
                      style="@style/tableCellStyle">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:text="@string/distinguishingSigns"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/textDistinguishingSigns"/>
        </LinearLayout>
    </TableRow>
</TableLayout>